# smudge

./: .directory  .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
docs/: Overview.md  README.md  _config.yml  lang.md  stdio.md  stdlang.md
docs/learn/: classes.md  functions.md  hello-world.md  how-to-read.md  if-and-loops.md  operators.md  statements.md  types.md  vars.md
docs/ssl/: stdcast.md  stdio.md  stdlang.md  stdmath.md  stdsystem.md
docs/syntax/: basic-syntax.md
mans/: smudge.man
scripts/: README.md
sm/: README.md  main.cpp  typedefs.h
sm/compile/: Statement.cpp  Statement.h  defs.h
sm/compile/v1/: Compiler.h
sm/compile/v1/compiler/: Compiler.cpp  globalScopeCompile.cpp  localScopeCompile.cpp  operatorsCompile.cpp
sm/compile/v2/: Compiler.h
sm/compile/v2/compiler/: Compiler.cpp  localScopeCompile.cpp
sm/error/: error.cpp  error.h
sm/exec/: Interpreter.h
sm/exec/interpreter/: Interpreter.cpp  arithmeticOpCodes.h  assignOpCodes.h  compareOpCodes.h  defineOpCodes.h  defines.h  exprStackOpCodes.h  funcStackOpCodes.h  jumpOpCodes.h  logicAndShiftsOpCodes.h  makeOpCodes.h  singleOperandMathOpCodes.h
sm/io/: RW.h  smc.h
sm/lib/: cast.cpp  io.cpp  lang.cpp  math.cpp  stdlib.cpp  stdlib.h  system.cpp  thread.cpp
sm/osd/: File.cpp  File.h
sm/parse/: Token.h  Tokenizer.cpp  Tokenizer.h
sm/runtime/: Object.h  casts.cpp  casts.h  gc.cpp  gc.h  id.cpp  id.h  utils.h
sm/utils/: String.h  Thread.cpp  Thread.h
sm/utils/unicode/: chars_2_3.inc  chars_3_2.inc  chars_3_3.inc  utf8.cpp  utf8.h
src/: license.inc  main.cpp  require_cpp11.h  typedefs.h
src/.deps/: smudge-main.Po
src/compile/: Compiler.h  Statement.cpp  Statement.h  defs.h
src/compile/compiler/: Compiler.cpp  globalScopeCompile.cpp  localScopeCompile.cpp  operatorsCompile.cpp
src/compile/v1/: Compiler.h
src/compile/v1/compiler/: Compiler.cpp  globalScopeCompile.cpp  localScopeCompile.cpp  operatorsCompile.cpp
src/compile/v2/: types.h
src/error/: error.cpp  error.h
src/exec/: Interpreter.h
src/exec/interpreter/: .Interpreter.cpp.swp  Interpreter.cpp  arithmeticOpCodes.h  assignOpCodes.h  compareOpCodes.h  defineOpCodes.h  defines.h  exprStackOpCodes.h  funcStackOpCodes.h  jumpOpCodes.h  logicAndShiftsOpCodes.h  makeOpCodes.h  singleOperandMathOpCodes.h
src/lib/: cast.cpp  io.cpp  lang.cpp  math.cpp  stdlib.cpp  stdlib.h  system.cpp
src/parse/: Token.h  Tokenizer.cpp  Tokenizer.h
src/runtime/: Object.h  casts.cpp  casts.h  gc.cpp  gc.h  id.cpp  id.h  utils.cpp  utils.h
src/utils/: (depracated) chunked_vector.h  String.h
src/utils/unicode/: chars_2_2.inc  chars_4_3.inc  chars_4_4.inc  utf8.cpp  utf8.h
